Ignore settings.ini files in repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore compiled python files
 *.pyc
 
+# Ignore the settings.ini file (user settings)
+*.ini
+
 # Ignore files output by build operations
 /[Bb]uild*/
 
